--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <title>React App</title>
   </head>
   <body>
+    <!-- In your HTML file -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWleTAMOPAcHeWptvRkOm_D20sjkOltHI&libraries=places"></script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
